--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-09-21 19:46:37 -0400</span>
+          <span class='datetime'>2009-09-22 11:40:25 -0400</span>
         </div>
       </div>
       <div id='content'>
@@ -41,7 +41,15 @@
             HEXOID, CHANGES
             </p>
             <p>
-            #### 0.2.0 (2009-09-??) ###############################
+            #### 0.2.1 (2009-09-22) ###############################
+            </p>
+            <ul>
+            <li>Use the absolute value of the object id.
+            
+            </li>
+            </ul>
+            <p>
+            #### 0.2.0 (2009-09-21) ###############################
             </p>
             <ul>
             <li>Initial public release
