--- a/files/CHANGES_txt.html
+++ b/files/CHANGES_txt.html
@@ -31,7 +31,7 @@
         </div>
         <div class='last-update'>
           Last Update:
-          <span class='datetime'>2009-09-22 11:40:25 -0400</span>
+          <span class='datetime'>2010-02-20 10:46:44 -0500</span>
         </div>
       </div>
       <div id='content'>
@@ -40,6 +40,14 @@
             <p>
             HEXOID, CHANGES
             </p>
+            <p>
+            #### 0.2.2 (2010-02-15) ###############################
+            </p>
+            <ul>
+            <li>CHANGE: Remove hanna dependency
+            
+            </li>
+            </ul>
             <p>
             #### 0.2.1 (2009-09-22) ###############################
             </p>
