--- a/classes/Object.html
+++ b/classes/Object.html
@@ -52,7 +52,7 @@
           <div id='section'>
             <div id='methods'>
               <h2>Public instance methods</h2>
-              <div class='public-instance method' id='method-M000001'>
+              <div class='method public-instance' id='method-M000001'>
                 <a name='M000001'>      </a>
                 <div class='synopsis'>
                   <span class='name'>hex_object_id</span>
@@ -65,7 +65,7 @@
                   <pre id='M000001-source'>   <span class="ruby-comment cmt"># File lib/hexoid.rb, line 4</span>&#x000A;4:   <span class="ruby-keyword kw">def</span> <span class="ruby-identifier">hex_object_id</span>&#x000A;5:     <span class="ruby-identifier">prefix</span> = <span class="ruby-constant">RUBY_VERSION</span> <span class="ruby-operator">&gt;=</span> <span class="ruby-value str">'1.9'</span> <span class="ruby-operator">?</span> <span class="ruby-value str">'0x00000'</span> <span class="ruby-operator">:</span> <span class="ruby-value str">'0x'</span>&#x000A;6:     <span class="ruby-value str">&quot;%s%x&quot;</span> <span class="ruby-operator">%</span> [<span class="ruby-identifier">prefix</span>, (<span class="ruby-keyword kw">self</span>.<span class="ruby-identifier">object_id</span>.<span class="ruby-identifier">abs</span> <span class="ruby-operator">&lt;&lt;</span> <span class="ruby-value">1</span>)]&#x000A;7:   <span class="ruby-keyword kw">end</span></pre>
                 </div>
               </div>
-              <div class='public-instance method' id='method-M000002'>
+              <div class='method public-instance' id='method-M000002'>
                 <a name='M000002'>      </a>
                 <div class='synopsis'>
                   <span class='name'>hexoid</span>
